# ibook_mlops

./: .dockerignore  .env.production.example  .gitignore  Makefile  Observability.md  PLAN.md  README.md  docker-compose.simulator.yml  docker-compose.yml  how_to_run.md  pyproject.toml  report.html  requirements-dev.txt  requirements.txt
common/: auto_training.py  config.py  model_utils.py  monitoring_utils.py  seed_transactions.py
data/monitoring/: daily_drift_summary.json
data/training/: realtime_features.parquet
docs/: Observability.md  PLAN.md  SIMULATOR.md  how_it_works.md  how_to_run.md  qa.md  simulator_testing.md  tech_blog_self_healing_fraud_mlops.md
ibook_mlops.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
multipart/: __init__.py  multipart.py
notebooks/: 03_model_training_fraud.ipynb
reports/: drift-0.html  drift-strong.html  fraud-drift-retrain-report.html  normal-10min.html  realtime-fraud-drift.html  realtime-report.html  strong-drift-5min.html  strong-drift.html
scripts/: __init__.py  mlflow_list_model_versions.py  seed_data.py
services/airflow/: Dockerfile  requirements-dags.txt
services/faust_worker/: Dockerfile  __init__.py  agents.py  app.py  models.py
services/kafka/: __init__.py  producer.py
services/mlflow/: Dockerfile  health_server.py
services/parquet_sink/: Dockerfile  sink.py
simulator/: Dockerfile  __init__.py  cli.py  config.py
simulator/core/: __init__.py  event_generator.py  fraud_simulator.py  kafka_emitter.py  transaction_generator.py  user_generator.py
simulator/runners/: __init__.py  load_test_runner.py  (+2 more)
(+59 files in other folders)
