[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibook-mlops"
version = "0.1.0"
description = "Local-first MLOps platform skeleton for Ibook (Phase 1)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "tests*", "services*", "simulator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

